--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,23 +10,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.7",
+    "@heroicons/react": "^2.2.0",
+    "@heroui/react": "^2.8.2",
     "@tailwindcss/forms": "^0.5.10",
     "@tanstack/react-query": "^5.85.5",
     "axios": "^1.11.0",
+    "framer-motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "react-is": "^19.1.1",
     "react-router-dom": "^7.8.1",
     "recharts": "^3.1.2",
-    "tailwindcss": "^4.1.12",
+    "tailwindcss": "^3.4.17",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@tailwindcss/postcss": "^4.1.12",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
