fix: CORS 오류 및 백엔드 오류 해결 feat: 캐싱 시스템 견고성 강화
- CORS 미들웨어 순서 수정 및 logger 변수 정의
- LRU 캐시 스레드 안전성 강화
- 의존성 fallback 구현 (psutil, APScheduler)
- 테스트 코드 통합 및 정리
- 시스템 안정성 및 성능 최적화

--- a/backend/env.example
+++ b/backend/env.example
@@ -1,3 +1,6 @@
+# Environment
+ENVIRONMENT=development
+
 # Database
 DATABASE_URL=postgresql://user:password@localhost:5432/stockvision
 REDIS_URL=redis://localhost:6379
