--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,8 @@ yfinance==0.2.65
 python-dotenv==1.1.1
 psycopg2-binary==2.9.9
 redis==5.0.1
+psutil==5.9.8
+APScheduler==3.10.4
 pydantic==2.11.7
 celery==5.3.4
 backtrader==1.9.78.123
